# MPHY0054_lab

./: MSc project proposals - Chuang.docx  README.md
cw1/: README.md
cw1/cw1q4_interfaces/: CMakeLists.txt  package.xml
cw1/cw1q4_interfaces/srv/: QuatToEuler.srv  QuatToRodrigues.srv
cw1/cw1q4_srv/: CMakeLists.txt  package.xml
cw1/cw1q5/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cw1/cw1q5/cw1q5/: cw1q5b_node.py  cw1q5d_node.py
cw1/cw1q5/launch/: cw1q5b.launch  cw1q5d.launch  q5b.rviz  q5b_launch.py  q5d_launch.py
cw1/cw1q5/rviz/: q5b.rviz
cw1/cw1q5/src/: cw1q5b_node.py  cw1q5d_node.py
cw1/cw1q9/: model.urdf  package.xml  setup.cfg  setup.py
cw1/cw1q9/cw1q9/: youbotKineBase.py  youbotKineKDL.py  youbotKineStudent.py
cw2/: README.md
cw2/cw2q4/: CMakeLists.txt  package.xml  setup.py
cw2/cw2q4/src/cw2q4/: youbotKineBase.py  youbotKineKDL.py  youbotKineStudent.py
cw2/cw2q6/: CMakeLists.txt  package.xml  setup.py
cw2/cw2q6/bags/: data.bag
cw2/cw2q6/launch/: cw2q6py.launch
cw2/cw2q6/src/: cw2q6_node.py
cw3/: README.md
cw3/cw3q2/: CMakeLists.txt  model.urdf  package.xml  setup.py
cw3/cw3q2/src/cw3q2/: iiwa14DynBase.py  iiwa14DynKDL.py  iiwa14DynStudent.py
cw3/cw3q5/: CMakeLists.txt  package.xml  setup.py
cw3/cw3q5/bag/: cw3q5.bag
cw3/cw3q5/config/: iiwa14.rviz
cw3/cw3q5/launch/: cw3q5.launch
cw3/cw3q5/src/: cw3q5.py
cw3/cw3q5/worlds/: world_c.world
lab01/: README.md
lab02/lab02_task01/: CMakeLists.txt  package.xml  subscriber_node.py
lab02/lab02_task01/launch/: lab02_task01.launch
lab02/lab02_task01/src/: publisher_node.py  subscriber_node.py
lab03/simple_addup/: CMakeLists.txt  package.xml
lab03/simple_addup/src/: addup_client.py  addup_server.py
lab03/simple_addup/srv/: AddUp.srv
lab03/simple_msg_example/: CMakeLists.txt  package.xml
lab03/simple_msg_example/msg/: CustomMsg.msg
lab03/simple_msg_example/src/: msg_publisher.py  msg_subscriber.py
lab03_task/: Rotmat2quat.srv  client.py  server.py
lab04_solution/: package.xml  setup.cfg  setup.py
lab04_solution/lab04_example/: CMakeLists.txt
lab04_solution/lab04_example/launch/: lab04_example.launch
lab04_solution/lab04_solution/: fkine_node.py
lab04_solution/launch/: fkine_launch.py
lab04_task/: package.xml  setup.cfg  setup.py
lab05/lab05_example/: CMakeLists.txt  README.md  my_robot.urdf  my_robot_template.urdf  package.xml
lab05/lab05_example/config/: my_robot.rviz
lab05/lab05_example/launch/: lab05_example.launch  lab05_example.launch.py  lab05_task.launch  lab05_task.launch.py  my_robot.launch.py
lab05/lab05_example/src/: lab05_example.py  lab05_task.py  lab05_task_solution.py  urdf_kdl_utils.py
lab06/lab06_example/: CMakeLists.txt  package.xml
lab06/lab06_example/launch/: lab06_example.launch.py
lab06/lab06_example/src/: lab06_example.py
lab06_solution/lab06_solution/: CMakeLists.txt  package.xml
lab06_solution/lab06_solution/launch/: lab06_example.launch.py
lab06_solution/lab06_solution/src/: lab06_example.py
lab07_task/: README.md  package.xml  setup.cfg  setup.py
lab07_task/lab07_task/: __init__.py  lab07_task.py
lab07_task/lab07_task/launch/: lab07_task.launch.py
lab07_task/lab07_task/src/: __init__.py
lab08_solution/: package.xml  setup.cfg  setup.py
lab08_solution/lab08_solution/: __init__.py  lab08_solution.py
lab08_solution/lab08_solution/src/: __init__.py  urdf_kdl_utils.py
lab08_solution/launch/: lab08_solution.launch.py
lab08_solution/resource/: lab08_solution
robot_description/open_manipulator_description/: CMakeLists.txt  package.xml
robot_description/open_manipulator_description/rviz/: open_manipulator.rviz  open_manipulator11.rviz  open_manipulator_links_hidden.rviz  open_manipulator_links_hidden11.rviz
robot_description/open_manipulator_description/urdf/: materials.xacro  open_manipulator.gazebo.xacro  open_manipulator.urdf.xacro
robot_description/youbot_description/: CMakeLists.txt  README.md  package.xml
robot_description/youbot_description/controller/: ros_controller.urdf.xacro
robot_description/youbot_description/meshes/sensors/: asus_xtion_pro_live_base.dae  asus_xtion_pro_live_camera.dae  hokuyo.dae  hokuyo_convex.dae  kinect.dae  microsoft_lifecam.dae
robot_description/youbot_description/meshes/youbot_arm/: arm0.dae  arm0_convex.dae  arm1.dae  arm1_convex.dae  arm2.dae  arm2_convex.dae  arm3.dae  arm3_convex.dae  arm4.dae  arm4_convex.dae  arm5.dae  arm5_convex.dae
robot_description/youbot_description/meshes/youbot_base/: base.dae  base_convex.dae
robot_description/youbot_description/meshes/youbot_gripper/: finger.dae  finger_convex.dae  palm.dae  palm_convex.dae
robot_description/youbot_description/meshes/youbot_plate/: plate.dae  plate_convex.dae
robot_description/youbot_description/robots/: youbot.urdf.xacro  youbot_arm_only.urdf.xacro  youbot_base_only.urdf.xacro  youbot_dual_arm.urdf.xacro
robot_description/youbot_description/urdf/: common.xacro  materials.urdf.xacro
robot_description/youbot_description/urdf/misc/: cam3d_tower.urdf.xacro  sensor_angle.urdf.xacro
robot_description/youbot_description/urdf/sensors/: asus_xtion_camera.gazebo.xacro  asus_xtion_camera.urdf.xacro  hokuyo_urg04_laser.gazebo.xacro  hokuyo_urg04_laser.urdf.xacro  kinect_camera.gazebo.xacro  kinect_camera.urdf.xacro  microsoft_lifecam.gazebo.xacro  microsoft_lifecam.urdf.xacro
robot_description/youbot_description/urdf/youbot_arm/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro  limits.urdf.xacro
robot_description/youbot_description/urdf/youbot_base/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
robot_description/youbot_description/urdf/youbot_gripper/: gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro  limits.urdf.xacro
robot_description/youbot_description/urdf/youbot_plate/: plate.urdf.xacro
youbot_simulator/: CMakeLists.txt  package.xml
youbot_simulator/config/: youbot.rviz  youbot_control.yaml
youbot_simulator/launch/: youbot_controller.launch  youbot_controller.launch.py  youbot_sim.launch  youbot_sim.launch.py
(+191 files in other folders)
