<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab07_task</name>
  <version>0.0.0</version>
  <description>Student task version of lab07 demo (fill in FK checkpoints and trajectory)</description>
  <maintainer email="chuang@todo.todo">chuang</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>youbot_description</depend>
  <depend>youbot_simulator</depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
