<?xml version="1.0"?>
<package format="3">
  <name>cw1q4_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for cw1q4</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>