<?xml version="1.0"?>
<package format="3">
  <name>cw1q9</name>
  <version>0.0.0</version>
  <description>The cw1q9 package updated for ROS 2</description>
  <maintainer email="mithrandir_chen@hotmail.com">tianchi</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-numpy</depend>
  <depend>kdl_parser_py</depend>
  <depend>urdf_parser_py</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>